[gd_scene load_steps=2 format=2]

[ext_resource path="res://Boid.gd" type="Script" id=1]

[node name="Boid" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 18, 0 )
width = 1.0
default_color = Color( 0, 1, 0.109804, 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 0.917702, 0.125141 )
polygon = PoolVector2Array( 0, -1, -3.22688, -2.12028, -2.5999, -1.43061, -5.67208, -2.18298, -5.60938, 2.0491, -2.81934, 1.04594, -3.57171, 1.76697, 0.00204468, 0.763805, 1.94567, 0.763805, 2.4786, 0.481667, 2.82343, -0.0199137, 2.50995, -0.521494, 1.85162, -0.86633 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( -5.44626, 0.0367537 )
scale = Vector2( 3, 3 )
color = Color( 0.945098, 1, 0, 1 )
polygon = PoolVector2Array( 2.47711, -0.545958, 2.50052, 0.472423, 4.24464, -0.124559 )

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2( 1.31545, 1.40235 )
scale = Vector2( 2, 2 )
color = Color( 0.631373, 0.631373, 0.619608, 1 )
polygon = PoolVector2Array( 0.623055, -1.26497, 0.435343, -3.91379, -0.649215, -4.66464, -2.77662, -4.93578, -1.5252, -3.99722, -1.50435, -1.91153, -1.85891, -1.53611, 0.101633, -0.972974 )

[node name="Polygon2D4" type="Polygon2D" parent="."]
position = Vector2( 1.22706, -0.056057 )
scale = Vector2( 2, 2 )
color = Color( 0.631373, 0.631373, 0.619608, 1 )
polygon = PoolVector2Array( 0.602198, 0.570434, 0.581341, 3.07326, 0.0182056, 4.09525, -2.13005, 4.84609, -1.58777, 3.38611, -1.73377, 1.217, -2.00491, 1.17528, -0.461503, 0.361865 )
